# diy-32x86os

./: .clang-format  .gitignore  CMakeLists.txt  README.md
startup/scripts/: qemu-debug-linux.sh
startup/source/boot/: CMakeLists.txt  boot.c  boot.h  start.S
startup/source/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
startup/source/kernel/: CMakeLists.txt  kernel.lds
startup/source/kernel/cpu/: cpu.c  irq.c
startup/source/kernel/dev/: time.c
startup/source/kernel/errno/: errno.c
startup/source/kernel/include/: errno.h  os_cfg.h  system_call.h
startup/source/kernel/include/cpu/: cpu.h  irq.h
startup/source/kernel/include/dev/: time.h
startup/source/kernel/include/mm/: memory.h  mm.h
startup/source/kernel/include/task/: task.h
startup/source/kernel/include/tools/: serial_print.h  stdarg.h  string.h
startup/source/kernel/init/: init.c  init.h  start.S
startup/source/kernel/mm/: memory.c  mm.c
startup/source/kernel/system_call/: fork.c  system_call.c
startup/source/kernel/task/: task.c
startup/source/kernel/tools/: serial_print.c  string.c
startup/source/loader/: CMakeLists.txt  loader.h  loader_16.c  loader_32.c  start.S
